--- a/package.json
+++ b/package.json
@@ -4,9 +4,25 @@
     "chalk": "^5.0.1",
     "drivelist": "^11.0.0",
     "fs-extra": "^10.1.0",
-    "get-audio-duration": "^3.1.0",
+    "get-mp3-duration": "^1.0.0",
     "leven": "^4.0.0",
+    "node-notifier": "^10.0.1",
     "ora": "^6.1.2",
     "prompts": "^2.4.2"
-  }
+  },
+  "name": "spherepackingsdcards-2022",
+  "version": "1.0.0",
+  "description": "Tools for interfacing with SD cards for Sphere Packing and other relevant works by Rafael Lozano-Hemmer",
+  "main": "make_sdCards.js",
+  "scripts": {
+    "start": "node make_sdCards.js",
+    "init": "node make_sdCards.js init",
+    "upload": "node make_sdCards.js upload",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "upload"
+  ],
+  "author": "Faadhi Fauzi",
+  "license": "ISC"
 }
